--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -2,6 +2,14 @@
   background-color: $color-grey-light-1;
 
   ///////////
+  //H2
+  .h02 {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 5px 0;
+  }
+  ///////////
   // FIGURE
   &__fig {
     height: 32rem;
