--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -7,12 +7,12 @@
 *::before,
 *::after {
   -webkit-box-sizing: inherit;
-  box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 html {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 62.5%;
 }
 
@@ -42,14 +42,14 @@ body {
   border-radius: 9px;
   overflow: hidden;
   -webkit-box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
-  box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
+          box-shadow: 0 2rem 6rem 0.5rem rgba(97, 85, 81, 0.2);
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 10rem minmax(100rem, auto);
-  grid-template-rows: 10rem minmax(100rem, auto);
+      grid-template-rows: 10rem minmax(100rem, auto);
   -ms-grid-columns: 1fr 2fr;
-  grid-template-columns: 1fr 2fr;
-  grid-template-areas: 'head head' 'list recipe';
+      grid-template-columns: 1fr 2fr;
+      grid-template-areas: 'head head' 'list recipe';
 }
 
 @media only screen and (max-width: 78.15em) {
@@ -60,10 +60,7 @@ body {
   }
 }
 
-.btn,
-.btn--small,
-.btn--small:link,
-.btn--small:visited {
+.btn, .btn--small, .btn--small:link, .btn--small:visited {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#fbdb89), to(#f48982));
   background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
   border-radius: 10rem;
@@ -75,25 +72,22 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
-.btn:hover,
-.btn--small:hover {
+.btn:hover, .btn--small:hover {
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+          transform: scale(1.05);
 }
 
-.btn:focus,
-.btn--small:focus {
+.btn:focus, .btn--small:focus {
   outline: none;
 }
 
-.btn > *:first-child,
-.btn--small > *:first-child {
+.btn > *:first-child, .btn--small > *:first-child {
   margin-right: 1rem;
 }
 
@@ -109,18 +103,14 @@ body {
   fill: currentColor;
 }
 
-.btn--small,
-.btn--small:link,
-.btn--small:visited {
+.btn--small, .btn--small:link, .btn--small:visited {
   font-size: 1.4rem;
   font-weight: 600;
   padding: 1.25rem 2.25rem;
   text-decoration: none;
 }
 
-.btn--small svg,
-.btn--small:link svg,
-.btn--small:visited svg {
+.btn--small svg, .btn--small:link svg, .btn--small:visited svg {
   height: 1.75rem;
   width: 1.75rem;
   fill: currentColor;
@@ -139,8 +129,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
@@ -179,16 +169,16 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .btn--round:hover {
   -webkit-transform: scale(1.07);
-  transform: scale(1.07);
+          transform: scale(1.07);
 }
 
 .btn--round:focus {
@@ -199,6 +189,10 @@ body {
   height: 2.5rem;
   width: 2.5rem;
   fill: #fff;
+}
+
+.btn--round i {
+  color: white;
 }
 
 .btn--tiny {
@@ -224,13 +218,13 @@ body {
 .btn--tiny:hover svg {
   fill: #f48982;
   -webkit-transform: translateY(-1px);
-  transform: translateY(-1px);
+          transform: translateY(-1px);
 }
 
 .btn--tiny:active svg {
   fill: #f48982;
   -webkit-transform: translateY(0);
-  transform: translateY(0);
+          transform: translateY(0);
 }
 
 .btn--tiny:not(:last-child) {
@@ -256,35 +250,29 @@ body {
   text-align: center;
 }
 
-.spinner svg {
+.spinner img {
   height: 6rem;
   width: 6rem;
-  fill: #f38e82;
-  -webkit-animation: rotate 2s infinite linear;
-  animation: rotate 2s infinite linear;
+}
+
+.spinner .hidden {
+  -webkit-animation: rotate 1s;
+          animation: rotate 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    opacity: 0;
+    visibility: hidden;
   }
 }
 
 @keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    opacity: 0;
+    visibility: hidden;
   }
 }
 
@@ -304,7 +292,7 @@ body {
   width: 3rem;
   fill: #f38e82;
   -webkit-transform: translateY(-0.3rem);
-  transform: translateY(-0.3rem);
+          transform: translateY(-0.3rem);
 }
 
 .message p,
@@ -325,11 +313,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__logo {
@@ -345,8 +333,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 3rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -354,9 +342,9 @@ body {
 
 .search:focus-within {
   -webkit-transform: translateY(-2px);
-  transform: translateY(-2px);
+          transform: translateY(-2px);
   -webkit-box-shadow: 0 0.7rem 3rem rgba(97, 85, 81, 0.08);
-  box-shadow: 0 0.7rem 3rem rgba(97, 85, 81, 0.08);
+          box-shadow: 0 0.7rem 3rem rgba(97, 85, 81, 0.08);
 }
 
 .search__field {
@@ -392,19 +380,15 @@ body {
   .search__field {
     width: auto;
   }
-
   .search__field::-webkit-input-placeholder {
     color: white;
   }
-
   .search__field:-ms-input-placeholder {
     color: white;
   }
-
   .search__field::-ms-input-placeholder {
     color: white;
   }
-
   .search__field::placeholder {
     color: white;
   }
@@ -417,8 +401,8 @@ body {
 
 .nav {
   -ms-flex-item-align: stretch;
-  -ms-grid-row-align: stretch;
-  align-self: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
   margin-right: 2.5rem;
 }
 
@@ -451,8 +435,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav__btn svg {
@@ -461,7 +445,7 @@ body {
   fill: #f38e82;
   margin-right: 0.7rem;
   -webkit-transform: translateY(-1px);
-  transform: translateY(-1px);
+          transform: translateY(-1px);
 }
 
 .nav__btn:focus {
@@ -480,7 +464,7 @@ body {
   width: 40rem;
   background-color: #fff;
   -webkit-box-shadow: 0 0.8rem 5rem 2rem rgba(97, 85, 81, 0.1);
-  box-shadow: 0 0.8rem 5rem 2rem rgba(97, 85, 81, 0.1);
+          box-shadow: 0 0.8rem 5rem 2rem rgba(97, 85, 81, 0.1);
   visibility: hidden;
   opacity: 0;
   -webkit-transition: all 0.5s 0.2s;
@@ -498,8 +482,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -515,14 +499,13 @@ body {
   opacity: 1;
 }
 
-.preview__link:link,
-.preview__link:visited {
+.preview__link:link, .preview__link:visited {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 1.5rem 3.25rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -533,7 +516,7 @@ body {
 .preview__link:hover {
   background-color: #f9f5f3;
   -webkit-transform: translateY(-2px);
-  transform: translateY(-2px);
+          transform: translateY(-2px);
 }
 
 .preview__link--active {
@@ -542,15 +525,15 @@ body {
 
 .preview__fig {
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 5.8rem;
-  flex: 0 0 5.8rem;
+      -ms-flex: 0 0 5.8rem;
+          flex: 0 0 5.8rem;
   border-radius: 50%;
   overflow: hidden;
   height: 5.8rem;
   margin-right: 2rem;
   position: relative;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .preview__fig::before {
@@ -571,7 +554,7 @@ body {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -581,11 +564,11 @@ body {
   display: grid;
   width: 100%;
   -ms-grid-columns: 1fr 2rem;
-  grid-template-columns: 1fr 2rem;
+      grid-template-columns: 1fr 2rem;
   row-gap: 0.1rem;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .preview__title {
@@ -613,11 +596,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 2rem;
   width: 2rem;
   border-radius: 10rem;
@@ -638,8 +621,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .results {
@@ -682,11 +665,18 @@ body {
   background-color: #f9f5f3;
 }
 
+.recipe .h02 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 5px 0;
+}
+
 .recipe__fig {
   height: 32rem;
   position: relative;
   -webkit-transform-origin: top;
-  transform-origin: top;
+          transform-origin: top;
 }
 
 .recipe__fig::before {
@@ -707,7 +697,7 @@ body {
   display: block;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .recipe__title {
@@ -715,7 +705,7 @@ body {
   bottom: 0;
   left: 50%;
   -webkit-transform: translate(-50%, 20%) skewY(-6deg);
-  transform: translate(-50%, 20%) skewY(-6deg);
+          transform: translate(-50%, 20%) skewY(-6deg);
   color: #fff;
   font-weight: 700;
   font-size: 3.25rem;
@@ -744,8 +734,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 7.5rem 8rem 3.5rem 8rem;
 }
 
@@ -756,8 +746,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .recipe__info:not(:last-child) {
@@ -782,7 +772,7 @@ body {
   display: flex;
   margin-left: 1.6rem;
   -webkit-transform: translateY(-1px);
-  transform: translateY(-1px);
+          transform: translateY(-1px);
 }
 
 .recipe__user-generated {
@@ -791,11 +781,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 4rem;
   width: 4rem;
   border-radius: 10rem;
@@ -812,26 +802,26 @@ body {
 .recipe__ingredients {
   padding: 5rem 8rem;
   font-size: 1.6rem;
-  line-height: 1.4;
+  line-height: 1;
   background-color: #f2efee;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .recipe__ingredient-list {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 2.5rem 3rem;
+      grid-template-columns: 1fr 1fr;
+  gap: 2rem 3rem;
   list-style: none;
 }
 
@@ -847,16 +837,16 @@ body {
   fill: #f38e82;
   margin-right: 1.1rem;
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
   margin-top: 0.1rem;
 }
 
 .recipe__quantity {
   margin-right: 0.5rem;
   -webkit-box-flex: 0;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
 }
 
 .recipe__directions {
@@ -867,11 +857,11 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .recipe__directions-text {
@@ -890,13 +880,13 @@ body {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 100rem;
   background-color: white;
   border-radius: 9px;
   padding: 5rem 6rem;
   -webkit-box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
+          box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
   z-index: 1000;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -922,7 +912,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   -webkit-backdrop-filter: blur(4px);
-  backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   z-index: 100;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -937,7 +927,7 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   gap: 4rem 6rem;
 }
 
@@ -945,10 +935,10 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 2.8fr;
-  grid-template-columns: 1fr 2.8fr;
+      grid-template-columns: 1fr 2.8fr;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 1.5rem;
 }
 
@@ -994,7 +984,7 @@ body {
   -ms-grid-column-span: 2;
   grid-column: 1 / span 2;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   margin-top: 1rem;
 }
 
@@ -1009,5 +999,6 @@ body {
 .upload__btn {
   grid-column: 1 / -1;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
 }
+/*# sourceMappingURL=main.css.map */
